# xavine-core

./: .gitignore  Makefile  README.md  architecture.md  debug.sh  docker-compose.yaml  profile.sh  todo.md  xmake.lua
assets/scripts/: main.lua
assets/shader/: vertex.glsl
container/: CMakeLists.txt  Makefile  debug.sh  run.sh
container/src/assets/: test.lua
container/src/cpp/: main.cpp
container/src/cpp/graphics/: lua_primitives.cpp
container/src/cpp/lua/: luainit.cpp
container/src/include/graphics/: lua_primitives.h
container/src/include/lua/: .luainit.h.swp  luainit.h
container/src/libs/mylua/: CMakeLists.txt
container/src/libs/mylua/include/: lua.hpp
include/: my_imgui.h  window.hpp
include/graphics/: window.hpp
include/scripting/: lua.hpp
scripts/: main.lua
src/: lua.cpp  main.c  main.cpp  main.cpp.bak  my_imgui.cpp  window.cpp
src/graphics/: my_imgui.cpp  texture.cpp  window.cpp
src/scripting/: lua.cpp
xavine-repo/xavine-graphics/: Makefile
xavine-repo/xavine-graphics/include/graphics/: window.hpp
xavine-repo/xavine-graphics/src/: window.cpp
